--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <script src="app.js"></script>
   </head>
   <body>
-    <p>Hello World</p>
+    <div id="map-container"></div>
   </body>
 </html>
