adding basic map

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Google Maps Play</title>
     <script src="https://maps.googleapis.com/maps/api/js"></script>
     <script src="app.js"></script>
+    <script src="mapWrapper.js"></script>
   </head>
   <body>
     <div id="map-container"></div>
