added ability to go to specified lat and lng

--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
   </head>
   <body>
     <div id="map-container"></div>
+    <hr/>
+    <label for="lat-input">Lat: </label>
+    <input id="lat-input" type="number" step="0.1" />
+    <label for="lng-input">Lng: </label>
+    <input id="lng-input" type="number" step="0.1" />
+    <button id="lat-lng-button" type="button">Go To</button>
   </body>
 </html>
