adding html for where am I button

--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
     <label for="lng-input">Lng: </label>
     <input id="lng-input" type="number" step="0.1" />
     <button id="lat-lng-button" type="button">Go To</button>
+    <hr/>
+    <button id="where-am-i-button" type="button">Where am I?</button>
   </body>
 </html>
