--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
   <body>
     <div id="map-container"></div>
     <hr/>
-    <label for="lat-input">Lat: </label>
-    <input id="lat-input" type="number" step="0.1" />
-    <label for="lng-input">Lng: </label>
-    <input id="lng-input" type="number" step="0.1" />
-    <button id="lat-lng-button" type="button">Go To</button>
+    <form action="">
+      <label for="lat-input">Lat: </label>
+      <input id="lat-input" type="number" min="-90" max="90" step="0.1" />
+      <label for="lng-input">Lng: </label>
+      <input id="lng-input" type="number" min="-180" max="180" step="0.1" />
+      <input id="lat-lng-button" type="submit" value="Go To"/>
+    </form>
     <hr/>
     <button id="where-am-i-button" type="button">Where am I?</button>
   </body>
