adding location display

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <body>
     <div id="map-container"></div>
     <hr/>
+    <p id="location-display"></p>
+    <hr/>
     <form action="">
       <label for="lat-input">Lat: </label>
       <input id="lat-input" type="number" min="-90" max="90" step="0.1" />
