--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div id="map-container" class="flex-item"></div>
       <div id="favourites-container" class="flex-item">
         <h2>Favourites</h2>
-        <table id="favourites-list">
+        <table id="favourites-table">
           <thead>
             <tr>
               <td>Favourite Name</td>
